feat: add login fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
 	<color name="teal_700">#FF018786</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+    <color name="facebook">#3F67B2</color>
+	<color name="google">#DB4437</color>
+	<color name="ocean">#468DB9</color>
+	<color name="ocean_heavy">#468DD9</color>
+	<color name="midnight">#4654B9</color>
+	<color name="sea">#46B9AB</color>
 </resources>
