--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.MobileNetwork" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.MobileNetwork" parent="Theme.MaterialComponents.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
+		<item name="colorPrimary">@color/ocean</item>
+		<item name="colorPrimaryVariant">@color/ocean_heavy</item>
 		<item name="colorOnPrimary">@color/white</item>
 		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_700</item>
+		<item name="colorSecondary">@color/midnight</item>
+		<item name="colorSecondaryVariant">@color/midnight</item>
 		<item name="colorOnSecondary">@color/black</item>
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
