--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,7 +28,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/login_fragment__email"
+        android:id="@+id/login_fragment__email_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -40,8 +40,10 @@
         app:startIconDrawable="@drawable/ic_user">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_fragment__email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -56,12 +58,13 @@
         android:hint="Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_fragment__email"
+        app:layout_constraintTop_toBottomOf="@+id/login_fragment__email_layout"
         app:startIconDrawable="@drawable/ic_key">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -127,13 +130,13 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:text="Don't have an account?"
-        app:layout_constraintBottom_toTopOf="@+id/login_fragment__sign_up_btn"
+        app:layout_constraintBottom_toTopOf="@+id/login_fragment__go_to_sign_up_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/login_fragment__sign_up_btn"
+        android:id="@+id/login_fragment__go_to_sign_up_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
